Fix vertical alignment

--- a/apps/lite/ui/src/routes/project/$id/workspace/Details.module.css
+++ b/apps/lite/ui/src/routes/project/$id/workspace/Details.module.css
@@ -171,6 +171,10 @@
 	}
 }
 
+.fileHeaderActions {
+	display: flex;
+}
+
 .filePath {
 	overflow: hidden;
 	color: var(--text-3);
